# blender-pro

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md
include/core/: allocator.hpp  logger.hpp  math_utils.hpp
include/editor/: application.hpp  file_io.hpp  scene_manager.hpp  undo_redo.hpp
include/graphics/: camera.hpp  render_node.hpp  renderer.hpp  shader.hpp
include/modeling/: animation.hpp  material.hpp  mesh.hpp  mesh_operations.hpp  physics.hpp  scene.hpp
include/ui/: ui_manager.hpp  ui_panel.hpp
src/: main.cpp
src/core/: CMakeLists.txt  allocator.cpp  logger.cpp  math_utils.cpp
src/editor/: CMakeLists.txt  application.cpp  file_io.cpp  scene_manager.cpp  undo_redo.cpp
src/graphics/: CMakeLists.txt  camera.cpp  render_node.cpp  renderer.cpp  shader.cpp
src/modeling/: CMakeLists.txt  animation.cpp  material.cpp  mesh.cpp  mesh_operations.cpp  physics.cpp  scene.cpp
src/ui/: CMakeLists.txt  ui_manager.cpp
